--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -40,6 +40,7 @@
     <uses-permission android:name="android.permission.GET_TASKS" />
 
     <application
+        android:name=".BaseApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
@@ -50,19 +51,6 @@
             android:name=".activity.MainActivity"
             android:configChanges="orientation|screenSize"
             android:screenOrientation="portrait" />
-
-        <activity-alias
-            android:name=".activity.MainActivityAlias"
-            android:enabled="false"
-            android:icon="@mipmap/ic_launcher12"
-            android:label="@string/app_name"
-            android:targetActivity=".activity.MainActivity">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity-alias>
 
         <activity-alias
             android:name=".activity.MainActivityDefault"
@@ -76,13 +64,23 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity-alias>
+        <activity-alias
+            android:name=".activity.MainActivityAlias"
+            android:enabled="false"
+            android:icon="@mipmap/ic_launcher12"
+            android:label="@string/app_name"
+            android:targetActivity=".activity.MainActivity">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
 
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity-alias>
 
         <activity android:name=".activity.ExpandListViewActivity" />
         <activity android:name=".activity.ShoppingCartActivity" />
         <activity android:name=".activity.WebViewActivity" />
-        <activity android:name=".activity.PersonInfoActivity"/>
-
+        <activity android:name=".activity.PersonInfoActivity" />
     </application>
 
 </manifest>
