--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,7 +37,6 @@ dependencies {
     })
 
     //增加城市选择定位功能
-
     compile 'com.github.bumptech.glide:glide:3.7.0'
     compile 'de.hdodenhof:circleimageview:2.1.0'
     compile 'com.google.code.gson:gson:2.7'
@@ -54,6 +53,7 @@ dependencies {
     compile 'com.android.support:recyclerview-v7:27.0.0'
     compile 'org.greenrobot:eventbus:3.1.1'
     compile 'com.github.niemj:ViewServer:v1.0'
+    compile 'org.xutils:xutils:3.5.0'
     // compile 'cn.jiguang.sdk:jpush:3.0.9'  // 此处以JPush 3.0.9 版本为例。
     // compile 'cn.jiguang.sdk:jcore:1.1.7'  // 此处以JCore 1.1.7 版本为例。
     compile 'com.mylhyl:acp:1.1.7'
