--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -77,6 +77,19 @@
             </intent-filter>
         </activity-alias>
 
+        <activity-alias
+            android:name=".activity.MainActivityAlias1"
+            android:enabled="false"
+            android:icon="@mipmap/shop_icon"
+            android:label="@string/app_name"
+            android:targetActivity=".activity.MainActivity">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity-alias>
+
         <activity android:name=".activity.ExpandListViewActivity" />
         <activity android:name=".activity.ShoppingCartActivity" />
         <activity android:name=".activity.WebViewActivity" />
